# Le_bon_gout

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  deploy.sh
backend/: firestore.indexes.json  pyproject.toml
backend/app/: enums.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  bot.py  cart.py  favorites.py  leads.py  orders.py  products.py  profile.py  webhooks.py
backend/app/api/routers/admin/: conversations.py  customers.py  leads.py  metrics.py  orders.py  products.py
backend/app/bot/: __init__.py  agent.py  live.py  sales.py  schemas.py  tools.py
backend/app/core/: config.py  error_handlers.py  exceptions.py  firestore.py  security.py
backend/app/repositories/: base.py  bot_conversation_repo.py  cart_repo.py  favorite_repo.py  lead_repo.py  order_repo.py  product_repo.py  user_repo.py
backend/app/schemas/: auth.py  cart.py  common.py  favorite.py  lead.py  metrics.py  order.py  product.py  user.py
backend/app/services/: auth_service.py  bot_conversation_service.py  cart_service.py  favorite_service.py  lead_service.py  metrics_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
backend/app/utils/: ids.py  money.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/unit/: test_bot_conversations.py  test_bot_tools.py  test_pricing_and_cart.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
(+90 files in other folders)
