[project]
name = "botler-pizza-backend"
version = "0.1.0"
description = "Botler Pizza — FastAPI backend (Firestore, Google OAuth2, Stripe)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "google-cloud-firestore>=2.16",
    "google-auth>=2.29",
    "google-genai>=1.0",
    "websockets>=12.0",
    "httpx>=0.27",
    "pyjwt>=2.8",
    "stripe>=9.0",
    "python-ulid>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
